added users collection/routes/controller
